--- a/style/informacoes.css
+++ b/style/informacoes.css
@@ -35,6 +35,7 @@ header nav a{
     text-decoration: none;
     color: #aaa;
     margin-right: 10px;
+    transition: all .3s;
 }
 
 header nav a:hover{
@@ -114,5 +115,19 @@ header nav a:hover{
 }
 
 .icon{
-    height: 24px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    font-size: 12px;
+    padding: 2px;
+    font-weight: bold;
+    pointer-events: none;
+    border: #fff solid 1px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.classificacao {
+    margin-top: 10px;
 }
