--- a/style/main.css
+++ b/style/main.css
@@ -35,6 +35,7 @@ header nav a{
     text-decoration: none;
     color: #aaa;
     margin-right: 10px;
+    transition: all .3s;
 }
 
 header nav a:hover{
