--- a/style/video.css
+++ b/style/video.css
@@ -14,7 +14,19 @@ header .container{
 }
 
 header .container .botao{
-    color: white;
-    margin-left: 5px;
+    margin-top: 16px;
+    color: #cccccc;
+    margin-left: 4px;
     font-size: 25px;
+    transition: all .3s;
+}
+
+header .container .botao:hover {
+    color: white;
+}
+
+.video {
+    border: none;
+    width: 100%;
+    height: 500px;
 }
