--- a/style/informacoes.css
+++ b/style/informacoes.css
@@ -35,7 +35,7 @@ header nav a{
     text-decoration: none;
     color: #aaa;
     margin-right: 10px;
-    transition: all .3s;
+    transition: .3s ease all;
 }
 
 header nav a:hover{
@@ -46,14 +46,11 @@ header nav a:hover{
 
 .filme-principal{
     font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/capa.jpg');
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('../img/capa.jpg');
     height: 575px;
     background-size: cover;
-
     display: flex;
     flex-direction: column;
-    
-    
     align-items:flex-start;
 }
 
@@ -88,8 +85,8 @@ header nav a:hover{
     color: white;
     font-family: Verdana, Times;
 
-    margin-top: 8px;
-    padding:15px 30px;
+    margin-top: 20px;
+    padding: 15px 30px;
     margin-right: 15px;
     font-size: 12px;
 
