--- a/style/video.css
+++ b/style/video.css
@@ -18,7 +18,7 @@ header .container .botao{
     color: #cccccc;
     margin-left: 4px;
     font-size: 25px;
-    transition: all .3s;
+    transition: .3s ease all;
 }
 
 header .container .botao:hover {
